# embedded-lambda-deno

./: Cargo.toml
.github/workflows/: build-rust.yaml
src/: main.rs
