[package]
name = "lamda-deno"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.3.0"
tokio = "1.9.0"
deno_core = "0.95.0"
deno_runtime = "0.21.0"
serde_json = "1.0.64"
gag = "1.0.0"

[[bin]]
name = "bootstrap"